tests/codegen/fail/union/enum_non_object_variant.rs
use juniper::{GraphQLEnum, GraphQLUnion};

#[derive(GraphQLEnum)]
pub enum Test {
    A,
    B,
}

#[derive(GraphQLUnion)]
enum Character {
    Test(Test),
}

fn main() {}
