tests/codegen/fail/union/enum_non_object_variant.stderr
error[E0277]: the trait bound `Test: GraphQLObject<__S>` is not satisfied
  --> fail/union/enum_non_object_variant.rs:11:10
   |
11 |     Test(Test),
   |          ^^^^ the trait `GraphQLObject<__S>` is not implemented for `Test`
   |
   = help: the following other types implement trait `GraphQLObject<S>`:
             <Box<T> as GraphQLObject<S>>
             <juniper::meta::Field<S> as GraphQLObject<S>>
             <Argument<S> as GraphQLObject<S>>
             <EnumValue as GraphQLObject<__S>>
             <SchemaType<S> as GraphQLObject<S>>
             <juniper::schema::model::TypeType<'a, S> as GraphQLObject<S>>
             <juniper::schema::model::DirectiveType<S> as GraphQLObject<S>>
             <Arc<T> as GraphQLObject<S>>
             <&T as GraphQLObject<S>>
